Fix menu on mobile

--- a/themes/endertheme/static/css/stylesheet.css
+++ b/themes/endertheme/static/css/stylesheet.css
@@ -44,6 +44,12 @@ button {
   color: white;
 }
 
+@media only screen and (max-width: 500px) {
+  button {
+    margin-right: 50vw;
+  }
+}
+
 .selected {
     background: rgba(0, 0, 0, 0.75);
 }
